Fix header falling behind "About" section

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -31,7 +31,6 @@ body {
 
 .header {
   background-color: #ffffff;
-  height: 200px;
 }
 
 #heading {
